--- a/src/lib/locales/ru-RU.json
+++ b/src/lib/locales/ru-RU.json
@@ -51,6 +51,7 @@
         "time-medium": "Время (средний)",
         "time-short": "Время (короткое)"
       },
+      "iconography-description": "Отображает библиотеку значков с возможностью поиска, доступную для использования в приложении.",
       "internationalization-description": "Содержит примеры функций интернационализации, доступных в приложении",
       "theming": {
         "app-theme-colors": "Цвета темы приложения",
@@ -96,6 +97,7 @@
     "database": "База данных",
     "debugging": "Отладка",
     "home": "Дом",
+    "iconography": "Иконография",
     "internationalization": "I18N: интернационализация",
     "sandbox": "Песочница",
     "theming": "Тематическое",
