--- a/src/lib/locales/uk-UA.json
+++ b/src/lib/locales/uk-UA.json
@@ -51,6 +51,7 @@
         "time-medium": "Час (середній)",
         "time-short": "Час (короткий)"
       },
+      "iconography-description": "Відображає доступну для пошуку бібліотеку піктограм, доступних для використання в програмі",
       "internationalization-description": "Містить приклади функцій інтернаціоналізації, доступних у додатку",
       "theming": {
         "app-theme-colors": "Кольори теми застосування",
@@ -96,6 +97,7 @@
     "database": "База даних",
     "debugging": "Налагодження",
     "home": "Домашній",
+    "iconography": "Іконопис",
     "internationalization": "i18n: Інтернаціоналізація",
     "sandbox": "Пісочниця",
     "theming": "Тематика",
