--- a/src/lib/locales/bn-BD.json
+++ b/src/lib/locales/bn-BD.json
@@ -51,6 +51,7 @@
         "time-medium": "সময় (মাঝারি)",
         "time-short": "সময় (সংক্ষিপ্ত)"
       },
+      "iconography-description": "অ্যাপ্লিকেশনে ব্যবহারের জন্য উপলব্ধ আইকনগুলির একটি অনুসন্ধানযোগ্য লাইব্রেরি প্রদর্শন করে৷",
       "internationalization-description": "অ্যাপ্লিকেশনটিতে উপলব্ধ আন্তর্জাতিকীকরণ বৈশিষ্ট্যগুলির উদাহরণ রয়েছে",
       "theming": {
         "app-theme-colors": "অ্যাপ্লিকেশন থিম রঙ",
@@ -96,6 +97,7 @@
     "database": "ডাটাবেস",
     "debugging": "ডিবাগিং",
     "home": "বাড়ি",
+    "iconography": "আইকনোগ্রাফি",
     "internationalization": "আই 18 এন: আন্তর্জাতিকীকরণ",
     "sandbox": "স্যান্ডবক্স",
     "theming": "থিমিং",
